100vh bug on mobile

--- a/client/src/stylesheets/index.css
+++ b/client/src/stylesheets/index.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-family: 'Oxygen', sans-serif;
   background-color: #0C0C0C;
+  height: 100%;
+  width: 100%;
 }
 
 .fa {
